hero banner done

--- a/index.html
+++ b/index.html
@@ -34,5 +34,16 @@
       </div>
     </nav>
     
+    <!-- Hero banner -->
+    <section
+      class="max-w-7xl mx-auto flex flex-col justify-center items-center gap-3 bg-gradient-to-r from-green-950 via-green-800 to-green-950 p-5 text-white text-center"
+    >
+      <img class="w-20" src="./assets/logo-dark.png" alt="" />
+      <h2 class="font-bold text-2xl">Emergency Service Directory</h2>
+      <p>
+        Government Emergency Services at Your Fingertip - A Project by
+        Government of the People's Republic of Bangladesh
+      </p>
+    </section>
   </body>
 </html>
